--- a/notebooks/1_preprocess_identified.ipynb
+++ b/notebooks/1_preprocess_identified.ipynb
@@ -5,7 +5,7 @@
    "id": "36fccb12",
    "metadata": {},
    "source": [
-    "Reformat published datasets for CysteineomeDB. Categories: Dataset Found, Reactive, Ligandable, Identified but not Ligandale, and Conditional. Note: Annotations from authors were used to determine \"ligandabiliy.\" Note: Peptide sequences from Yang DIA were manually mapped to the uniprot fasta (2201) to find cysteine identifiers."
+    "Reformat published datasets for CysteineomeDB. Categories: Dataset Identified, Reactive and Ligandable. Note: Annotations from authors were used to determine \"hyperreactivity\" and \"ligandabiliy.\" Note: Peptide sequences from Yang DIA were manually mapped to the uniprot fasta (2201) to find cysteine identifiers."
    ]
   },
   {
