--- a/notebooks/1_preprocess_identified.ipynb
+++ b/notebooks/1_preprocess_identified.ipynb
@@ -13,7 +13,7 @@
    "id": "57106303",
    "metadata": {},
    "source": [
-    "main directory 'data' has nine folders according to each publication"
+    "(main directory 'data' has nine folders containing necessary SI tables for each publication)"
    ]
   },
   {
