--- a/notebooks/4_preprocess_ligandability.ipynb
+++ b/notebooks/4_preprocess_ligandability.ipynb
@@ -3173,7 +3173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uniprot_dict = get_uniprot_dict('/Users/lisamarieboatner/Dropbox/Backus/master/uniprot/data/220505', '2201_uniprot.fasta')"
+    "uniprot_dict = get_uniprot_dict('/Users', '2201_uniprot.fasta')"
    ]
   },
   {
@@ -3315,14 +3315,6 @@
    "outputs": [],
    "source": [
     "len(dia_ligandability_missing_protein_ids)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "700e8334",
-   "metadata": {},
-   "source": [
-    "There are 113 proteins identified in DIA ligandability experiment that were not found in 2207 fasta. 48 were not found in 2207 fasta out of the peptides mapped to single protein entries. 48 were not found in 2207 fasta out of the peptides mapped to single protein entries and single modified peptides."
    ]
   },
   {
